--- a/packages/core/bunfig.toml
+++ b/packages/core/bunfig.toml
@@ -1,10 +1,10 @@
 preload = [
-  "@ecopages/core/src/loaders/inline-postcss.loader.ts",
-  "@ecopages/core/src/loaders/mdx.loader.ts",
+  "@ecopages/core/loaders/inline-postcss.loader.js",
+  "@ecopages/core/loaders/mdx.loader.js",
 ]
 
 [test]
 preload = [
-  "@ecopages/core/src/loaders/inline-postcss.loader.ts",
-  "@ecopages/core/src/loaders/mdx.loader.ts",
+  "@ecopages/core/loaders/inline-postcss.loader.js",
+  "@ecopages/core/loaders/mdx.loader.js",
 ]
