--- a/packages/core/fixtures/app/bunfig.toml
+++ b/packages/core/fixtures/app/bunfig.toml
@@ -1,4 +1,4 @@
 preload = [
-  "@ecopages/core/src/loaders/inline-postcss.loader.ts",
-  "@ecopages/core/src/loaders/mdx.loader.ts",
+  "@ecopages/core/loaders/inline-postcss.loader.js",
+  "@ecopages/core/loaders/mdx.loader.js",
 ]
