--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -21,14 +21,13 @@
 		"directory": "packages/integrations/mdx"
 	},
 	"scripts": {
-		"build:lib": "tsup"
+		"prebuild:lib": "rm -rf dist",
+		"build:lib": "bun run build.ts && bun run build:types",
+		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias"
 	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
 		"@kitajs/ts-html-plugin": "^4.0.1",
 		"@ecopages/core": "workspace:*"
-	},
-	"devDependencies": {
-		"tsup": "^8.0.2"
 	}
 }
