feat(#44): using esbuild instead of bun on build lib and fixed issue with types once lib has been built in deps-manager

--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -2,6 +2,7 @@
 	"name": "@ecopages/playground",
 	"private": true,
 	"scripts": {
+		"watch:dev": "ecopages watch:dev",
 		"dev": "ecopages dev",
 		"build": "ecopages build",
 		"start": "ecopages start",
