--- a/package.json
+++ b/package.json
@@ -3,26 +3,32 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"watch:dev:playground": "bun run watch:lib & bun run dev:playground",
 		"dev:playground": "bun run --filter @ecopages/playground dev",
 		"build:playground": "bun run --filter @ecopages/playground build",
 		"start:playground": "bun run --filter @ecopages/playground start",
 		"preview:playground": "bun run --filter @ecopages/playground preview",
+		"watch:dev:starter": "bun run watch:lib & bun run dev:starter",
 		"dev:starter": "bun run --filter @ecopages/starter dev",
 		"build:starter": "bun run --filter @ecopages/starter build",
 		"start:starter": "bun run --filter @ecopages/starter start",
 		"preview:starter": "bun run --filter @ecopages/starter preview",
+		"watch:dev:docs": "bun run watch:lib & bun run dev:docs",
 		"dev:docs": "bun run --filter @ecopages/docs dev",
 		"build:docs": "bun run --filter @ecopages/docs build",
 		"start:docs": "bun run --filter @ecopages/docs start",
 		"preview:docs": "bun run --filter @ecopages/docs preview",
+		"watch:dev:docs-radiant": "bun run watch:lib & bun run dev:docs-radiant",
 		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev",
 		"build:docs-radiant": "bun run --filter @ecopages/docs-radiant build",
 		"start:docs-radiant": "bun run --filter @ecopages/docs-radiant start",
 		"preview:docs-radiant": "bun run --filter @ecopages/docs-radiant preview",
+		"watch:dev:radiant-ui": "bun run watch:lib & bun run dev:radiant-ui",
 		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev",
 		"build:radiant-ui": "bun run --filter @ecopages/radiant-ui build",
 		"start:radiant-ui": "bun run --filter @ecopages/radiant-ui start",
 		"preview:radiant-ui": "bun run --filter @ecopages/radiant-ui preview",
+		"watch:dev:react-app": "bun run watch:lib & bun run dev:react-app",
 		"dev:react-app": "bun run --filter @ecopages/react-app dev",
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
@@ -31,7 +37,8 @@
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged",
-		"build:lib": "bun run --filter @ecopages/core build:lib && bun run --filter '*' build:lib"
+		"build:lib": "bun run --filter @ecopages/core build:lib && bun run --filter '*' build:lib",
+		"watch:lib": "bun run --filter '*' watch:lib"
 	},
 	"devDependencies": {
 		"husky": "^9.0.10",
