feat(#44): added watch:Dev mode for internal development while working on the lib

--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"watch:dev:playground": "bun run watch:lib & bun run dev:playground",
+		"watch:dev:playground": "bun run watch:lib & bun run --filter @ecopages/playground watch:dev",
 		"dev:playground": "bun run --filter @ecopages/playground dev",
 		"build:playground": "bun run --filter @ecopages/playground build",
 		"start:playground": "bun run --filter @ecopages/playground start",
 		"preview:playground": "bun run --filter @ecopages/playground preview",
-		"watch:dev:starter": "bun run watch:lib & bun run dev:starter",
+		"watch:dev:starter": "bun run watch:lib & bun run --filter @ecopages/starter watch:dev",
 		"dev:starter": "bun run --filter @ecopages/starter dev",
 		"build:starter": "bun run --filter @ecopages/starter build",
 		"start:starter": "bun run --filter @ecopages/starter start",
 		"preview:starter": "bun run --filter @ecopages/starter preview",
-		"watch:dev:docs": "bun run watch:lib & bun run dev:docs",
+		"watch:dev:docs": "bun run watch:lib & bun run --filter @ecopages/docs watch:dev",
 		"dev:docs": "bun run --filter @ecopages/docs dev",
 		"build:docs": "bun run --filter @ecopages/docs build",
 		"start:docs": "bun run --filter @ecopages/docs start",
 		"preview:docs": "bun run --filter @ecopages/docs preview",
-		"watch:dev:docs-radiant": "bun run watch:lib & bun run dev:docs-radiant",
+		"watch:dev:docs-radiant": "bun run watch:lib & bun run --filter @ecopages/docs-radiant watch:dev",
 		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev",
 		"build:docs-radiant": "bun run --filter @ecopages/docs-radiant build",
 		"start:docs-radiant": "bun run --filter @ecopages/docs-radiant start",
 		"preview:docs-radiant": "bun run --filter @ecopages/docs-radiant preview",
-		"watch:dev:radiant-ui": "bun run watch:lib & bun run dev:radiant-ui",
+		"watch:dev:radiant-ui": "bun run watch:lib & bun run --filter @ecopages/radiant-ui watch:dev",
 		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev",
 		"build:radiant-ui": "bun run --filter @ecopages/radiant-ui build",
 		"start:radiant-ui": "bun run --filter @ecopages/radiant-ui start",
 		"preview:radiant-ui": "bun run --filter @ecopages/radiant-ui preview",
-		"watch:dev:react-app": "bun run watch:lib & bun run dev:react-app",
+		"watch:dev:react-app": "bun run watch:lib & bun run --filter @ecopages/react-app watch:dev",
 		"dev:react-app": "bun run --filter @ecopages/react-app dev",
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
