--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"type": "module",
-	"files": ["dist", "src/env.d.ts", "src/declaration.d.ts"],
+	"files": ["dist"],
 	"bin": {
 		"ecopages": "ecopages.ts"
 	},
@@ -52,12 +52,6 @@
 		"./loaders/mdx.loader.js": {
 			"import": "./dist/loaders/mdx.loader.js",
 			"types": "./dist/loaders/mdx.loader.d.ts"
-		},
-		"./env.d.ts": {
-			"import": "./env.d.ts"
-		},
-		"./declaration.d.ts": {
-			"import": "./declaration.d.ts"
 		}
 	},
 	"repository": {
@@ -72,7 +66,7 @@
 		"watch:lib": "bun run build.ts --dev-mode"
 	},
 	"dependencies": {
-		"@parcel/watcher": "^2.4.0",
+		"chokidar": "^3.6.0",
 		"@mdx-js/esbuild": "^3.0.1",
 		"@types/postcss-import": "^14.0.3",
 		"autoprefixer": "^10.4.16",
