--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -19,7 +19,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "./src/declarations.d.ts", "./src/env.d.ts"],
+		"types": ["bun-types"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
