--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -66,7 +66,7 @@
 		"watch:lib": "bun run build.ts --dev-mode"
 	},
 	"dependencies": {
-		"chokidar": "^3.6.0",
+		"@parcel/watcher": "^2.4.0",
 		"@mdx-js/esbuild": "^3.0.1",
 		"@types/postcss-import": "^14.0.3",
 		"autoprefixer": "^10.4.16",
