feat(#44): updated build and bin scripts

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"files": ["dist"],
 	"bin": {
-		"ecopages": "ecopages.ts"
+		"ecopages": "./dist/bin/ecopages.js"
 	},
 	"types": "./dist/index.d.ts",
 	"exports": {
