--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,6 +72,8 @@
 		"autoprefixer": "^10.4.16",
 		"bun-types": "latest",
 		"cssnano": "^6.0.2",
+		"fdir": "^6.1.1",
+		"picomatch": "^2.3.1",
 		"postcss": "^8.4.32",
 		"postcss-import": "^15.1.0",
 		"tailwindcss": "^3.4.1",
