--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.7.0/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.8.1/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -42,7 +42,7 @@
 			"indentWidth": 2,
 			"indentStyle": "space",
 			"quoteStyle": "single",
-			"trailingComma": "all",
+			"trailingCommas": "all",
 			"semicolons": "always",
 			"jsxQuoteStyle": "double",
 			"quoteProperties": "asNeeded",
