--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -13,8 +13,8 @@
 		"@ecopages/mdx": "workspace:*",
 		"@types/react": "npm:types-react@beta",
 		"@types/react-dom": "npm:types-react-dom@beta",
-		"react": "^19.0.0-beta-26f2496093-20240514",
-		"react-dom": "^19.0.0-beta-26f2496093-20240514"
+		"react": "19.0.0-beta-26f2496093-20240514",
+		"react-dom": "19.0.0-beta-26f2496093-20240514"
 	},
 	"overrides": {
 		"@types/react": "npm:types-react@beta",
