--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
 		"preview:react-app": "bun run --filter @ecopages/react-app preview",
-		"clean": "rm -rf node_modules bun.lockb && bun install && bun run build:lib",
+		"clean": "rm -rf node_modules bun.lockb && bun install && bun run build:ecopages",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged",
-		"build:lib": "bun run --filter @ecopages/core build:lib && bun run --filter '*' build:lib",
-		"watch:lib": "bun run --filter '*' watch:lib"
+		"build:deps": "bun run --filter @ecopages/logger build:lib",
+		"build:core": "bun run --filter @ecopages/core build:lib",
+		"build:integrations": "bun run --filter @ecopages/kitajs --filter @ecopages/lit --filter @ecopages/mdx --filter @ecopages/react build:lib",
+		"build:ecopages": "bun run build:deps && bun run build:core && bun run build:integrations",
+		"watch:ecopages": "bun run --filter '*' watch:lib"
 	},
 	"devDependencies": {
 		"husky": "^9.0.10",
