--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -21,7 +21,6 @@
 		"directory": "packages/integrations/kitajs"
 	},
 	"scripts": {
-		"prebuild:lib": "rm -rf dist",
 		"build:lib": "bun run build.ts && bun run build:types",
 		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias",
 		"watch:lib": "bun run build.ts --dev-mode"
@@ -34,6 +33,7 @@
 		"@ecopages/core": "workspace:*"
 	},
 	"devDependencies": {
+		"@ecopages/logger": "workspace:*",
 		"esbuild": "^0.21.4"
 	}
 }
