--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -12,7 +12,7 @@
 		},
 		".": {
 			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js"
+			"import": "./src/react.plugin.ts"
 		}
 	},
 	"repository": {
@@ -21,7 +21,6 @@
 		"directory": "packages/integrations/react"
 	},
 	"scripts": {
-		"prebuild:lib": "rm -rf dist",
 		"build:lib": "bun run build.ts && bun run build:types",
 		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias",
 		"watch:lib": "bun run build.ts --dev-mode"
@@ -32,8 +31,9 @@
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
-		"react": "react@19.0.0-rc-f994737d14-20240522",
-		"react-dom": "react-dom@19.0.0-rc-f994737d14-20240522"
+		"@ecopages/logger": "workspace:*",
+		"react": "19.0.0-beta-26f2496093-20240514",
+		"react-dom": "19.0.0-beta-26f2496093-20240514"
 	},
 	"devDependencies": {
 		"@types/react": "npm:types-react@beta",
