--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@ecopages/lit",
+	"name": "@ecopages/logger",
 	"version": "0.0.0",
 	"license": "MIT",
 	"main": "./dist/index.js",
@@ -18,22 +18,13 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
-		"directory": "packages/integrations/lit"
+		"directory": "packages/logger"
 	},
 	"scripts": {
 		"build:lib": "bun run build.ts && bun run build:types",
-		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias",
-		"watch:lib": "bun run build.ts --dev-mode"
-	},
-	"dependencies": {
-		"@lit-labs/ssr": "^3.2.2",
-		"lit": "^3.1.3"
-	},
-	"peerDependencies": {
-		"@ecopages/core": "workspace:*"
+		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias"
 	},
 	"devDependencies": {
-		"@ecopages/logger": "workspace:*",
 		"esbuild": "^0.21.4"
 	}
 }
