feat(#44): cleaned up deps on build + added test for kitajs integration

--- a/package.json
+++ b/package.json
@@ -8,32 +8,27 @@
 		"build:playground": "bun run --filter @ecopages/playground build",
 		"start:playground": "bun run --filter @ecopages/playground start",
 		"preview:playground": "bun run --filter @ecopages/playground preview",
-		"starter": "bun run watch:lib & bun run --filter @ecopages/starter watch:dev",
 		"dev:starter": "bun run --filter @ecopages/starter dev",
 		"build:starter": "bun run --filter @ecopages/starter build",
 		"start:starter": "bun run --filter @ecopages/starter start",
 		"preview:starter": "bun run --filter @ecopages/starter preview",
-		"docs": "bun run watch:lib & bun run --filter @ecopages/docs watch:dev",
 		"dev:docs": "bun run --filter @ecopages/docs dev",
 		"build:docs": "bun run --filter @ecopages/docs build",
 		"start:docs": "bun run --filter @ecopages/docs start",
 		"preview:docs": "bun run --filter @ecopages/docs preview",
-		"docs-radiant": "bun run watch:lib & bun run --filter @ecopages/docs-radiant watch:dev",
 		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev",
 		"build:docs-radiant": "bun run --filter @ecopages/docs-radiant build",
 		"start:docs-radiant": "bun run --filter @ecopages/docs-radiant start",
 		"preview:docs-radiant": "bun run --filter @ecopages/docs-radiant preview",
-		"radiant-ui": "bun run watch:lib & bun run --filter @ecopages/radiant-ui watch:dev",
 		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev",
 		"build:radiant-ui": "bun run --filter @ecopages/radiant-ui build",
 		"start:radiant-ui": "bun run --filter @ecopages/radiant-ui start",
 		"preview:radiant-ui": "bun run --filter @ecopages/radiant-ui preview",
-		"react-app": "bun run watch:lib & bun run --filter @ecopages/react-app watch:dev",
 		"dev:react-app": "bun run --filter @ecopages/react-app dev",
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
 		"preview:react-app": "bun run --filter @ecopages/react-app preview",
-		"clean": "rm -rf node_modules bun.lockb && bun install && bun run build:ecopages",
+		"clean": "rm -rf node_modules bun.lockb packages/*/dist packages/**/*/dist && bun install && bun run build:ecopages",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged",
