feat(#44): added fastify fs server

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"watch:dev:playground": "bun run watch:lib & bun run --filter @ecopages/playground watch:dev",
+		"watch:dev:playground": "bun run watch:ecopages & bun run --filter @ecopages/playground watch:dev",
 		"dev:playground": "bun run --filter @ecopages/playground dev",
 		"build:playground": "bun run --filter @ecopages/playground build",
 		"start:playground": "bun run --filter @ecopages/playground start",
@@ -35,7 +35,8 @@
 		"build:deps": "bun run --filter @ecopages/logger build:lib",
 		"build:core": "bun run --filter @ecopages/core build:lib",
 		"build:integrations": "bun run --filter @ecopages/kitajs --filter @ecopages/lit --filter @ecopages/mdx --filter @ecopages/react build:lib",
-		"build:ecopages": "bun run build:deps && bun run build:core && bun run build:integrations",
+		"build:servers": "bun run --filter @ecopages/fastify build:lib",
+		"build:ecopages": "bun run build:deps && bun run build:core && bun run build:integrations && bun run build:servers",
 		"watch:ecopages": "bun run --filter '*' watch:lib"
 	},
 	"devDependencies": {
@@ -47,6 +48,7 @@
 	"workspaces": [
 		"packages/*",
 		"packages/integrations/*",
+		"packages/servers/*",
 		"examples/*",
 		"apps/*"
 	],
