--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -30,10 +30,10 @@
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*"
+		"@ecopages/core": "workspace:*",
+		"@ecopages/logger": "workspace:*"
 	},
 	"devDependencies": {
-		"@ecopages/logger": "workspace:*",
 		"esbuild": "^0.21.4"
 	}
 }
