--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -28,10 +28,10 @@
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
 		"@kitajs/ts-html-plugin": "^4.0.1",
-		"@ecopages/core": "workspace:*"
+		"@ecopages/core": "workspace:*",
+		"@ecopages/logger": "workspace:*"
 	},
 	"devDependencies": {
-		"@ecopages/logger": "workspace:*",
 		"esbuild": "^0.21.4"
 	}
 }
