--- a/examples/playground/tsconfig.json
+++ b/examples/playground/tsconfig.json
@@ -12,7 +12,8 @@
 		"moduleResolution": "node",
 		"noImplicitOverride": true,
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": ["./src/*"],
+			"@/types": ["./src/index.d.ts"]
 		},
 		"plugins": [
 			{
