--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -2,28 +2,14 @@
 	"name": "@ecopages/react",
 	"version": "0.0.0",
 	"license": "MIT",
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "./src/index.ts",
+	"types": "./src/index.ts",
 	"type": "module",
-	"files": ["dist"],
-	"exports": {
-		"./package.json": {
-			"import": "./package.json"
-		},
-		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./src/react.plugin.ts"
-		}
-	},
+	"files": ["src"],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/integrations/react"
-	},
-	"scripts": {
-		"build:lib": "bun run build.ts && bun run build:types",
-		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias",
-		"watch:lib": "bun run build.ts --dev-mode"
 	},
 	"overrides": {
 		"@types/react": "npm:types-react@beta",
@@ -37,7 +23,6 @@
 	},
 	"devDependencies": {
 		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta",
-		"esbuild": "^0.21.4"
+		"@types/react-dom": "npm:types-react-dom@beta"
 	}
 }
