--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -2,29 +2,13 @@
 	"name": "@ecopages/logger",
 	"version": "0.0.0",
 	"license": "MIT",
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "./src/index.ts",
+	"types": "./src/index.ts",
 	"type": "module",
-	"files": ["dist"],
-	"exports": {
-		"./package.json": {
-			"import": "./package.json"
-		},
-		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js"
-		}
-	},
+	"files": ["src"],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/logger"
-	},
-	"scripts": {
-		"build:lib": "bun run build.ts && bun run build:types",
-		"build:types": "tsc -p tsconfig.build.json && bunx tsc-alias"
-	},
-	"devDependencies": {
-		"esbuild": "^0.21.4"
 	}
 }
