--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -2,7 +2,7 @@
 	"name": "@ecopages/playground",
 	"private": true,
 	"scripts": {
-		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/dist/main/build-app.js --watch-lib",
+		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/main/build-app.ts --watch-lib",
 		"dev": "NODE_ENV=development ecopages dev",
 		"build": "ecopages build",
 		"start": "ecopages start",
