--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,6 @@
 		"picomatch": "^2.3.1",
 		"postcss": "^8.4.32",
 		"postcss-import": "^15.1.0",
-		"tailwindcss": "^3.4.1",
-		"@lit-labs/ssr": "^3.2.2"
+		"tailwindcss": "^3.4.1"
 	}
 }
