--- a/apps/docs-radiant/package.json
+++ b/apps/docs-radiant/package.json
@@ -9,6 +9,8 @@
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
+		"@ecopages/mdx-loader": "workspace:*",
+		"@ecopages/postcss-loader": "workspace:*",
 		"shiki": "^1.1.2"
 	}
 }
