--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -11,6 +11,8 @@
 		"@ecopages/core": "workspace:*",
 		"@ecopages/kitajs": "workspace:*",
 		"@ecopages/lit": "workspace:*",
-		"@ecopages/mdx": "workspace:*"
+		"@ecopages/mdx": "workspace:*",
+		"@ecopages/mdx-loader": "workspace:*",
+		"@ecopages/postcss-loader": "workspace:*"
 	}
 }
