--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -11,8 +11,8 @@
 		"@ecopages/core": "workspace:*",
 		"@ecopages/react": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
-		"@ecopages/mdx-loader": "workspace:*",
-		"@ecopages/postcss-loader": "workspace:*",
+		"@ecopages/bun-mdx-loader": "workspace:*",
+		"@ecopages/bun-postcss-loader": "workspace:*",
 		"@types/react": "npm:types-react@beta",
 		"@types/react-dom": "npm:types-react-dom@beta",
 		"react": "19.0.0-beta-26f2496093-20240514",
