--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,8 +9,8 @@
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
-		"@ecopages/mdx-loader": "workspace:*",
-		"@ecopages/postcss-loader": "workspace:*",
+		"@ecopages/bun-mdx-loader": "workspace:*",
+		"@ecopages/bun-postcss-loader": "workspace:*",
 		"shiki": "^1.1.2"
 	}
 }
