--- a/examples/starter/bunfig.toml
+++ b/examples/starter/bunfig.toml
@@ -1,1 +1,1 @@
-preload = ["@ecopages/postcss-loader", "@ecopages/mdx-loader"]
+preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-loader"]
