--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -12,7 +12,7 @@
 		"@ecopages/kitajs": "workspace:*",
 		"@ecopages/lit": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
-		"@ecopages/mdx-loader": "workspace:*",
-		"@ecopages/postcss-loader": "workspace:*"
+		"@ecopages/bun-mdx-loader": "workspace:*",
+		"@ecopages/bun-postcss-loader": "workspace:*"
 	}
 }
