--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -2,8 +2,8 @@
 	"name": "@ecopages/kitajs",
 	"version": "0.0.0",
 	"license": "MIT",
-	"main": "./src/index.ts",
-	"types": "./src/index.ts",
+	"main": "./src/kitajs.plugin.ts",
+	"types": "./src/kitajs.plugin.ts",
 	"type": "module",
 	"files": ["src"],
 	"repository": {
