feat(#44) Added bun-inline-css-plugin and reative tests

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"packages/*",
 		"packages/integrations/*",
 		"packages/loaders/*",
+		"packages/plugins/*",
 		"packages/processors/*",
 		"examples/*",
 		"apps/*"
