--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,15 +18,10 @@
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@parcel/watcher": "^2.4.0",
-		"@mdx-js/esbuild": "^3.0.1",
-		"@types/postcss-import": "^14.0.3",
-		"autoprefixer": "^10.4.16",
-		"bun-types": "latest",
-		"cssnano": "^6.0.2",
 		"fdir": "^6.1.1",
-		"picomatch": "^2.3.1",
-		"postcss": "^8.4.32",
-		"postcss-import": "^15.1.0",
-		"tailwindcss": "^3.4.1"
+		"picomatch": "^2.3.1"
+	},
+	"devDependencies": {
+		"bun-types": "latest"
 	}
 }
